--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,18 @@
         <dependency>
             <groupId>org.jboss.marshalling</groupId>
             <artifactId>jboss-marshalling-serial</artifactId>
-            <version>2.0.0.Beta2</version>
+            <version>2.0.2.Final</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jboss.marshalling</groupId>
+            <artifactId>jboss-marshalling-river</artifactId>
+            <version>2.0.2.Final</version>
+        </dependency>
     </dependencies>
 </project>
