--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,10 @@
             <artifactId>jboss-marshalling-river</artifactId>
             <version>2.0.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.19.Final</version>
+        </dependency>
     </dependencies>
 </project>
