--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,6 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <useIncrementalCompilation>false</useIncrementalCompilation>
-
                     <annotationProcessors>
                         <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
                     </annotationProcessors>
@@ -47,7 +46,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <!-- <resources>
+         <resources>
              <resource>
                  <directory>${basedir}/src/main/resources</directory>
                  <includes>
@@ -57,7 +56,7 @@
              <resource>
                  <directory>${basedir}/src/main/resources</directory>
              </resource>
-         </resources>-->
+         </resources>
     </build>
 
     <dependencies>
@@ -204,6 +203,12 @@
             <artifactId>guava</artifactId>
             <version>24.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.biezhi</groupId>
+            <artifactId>excel-plus</artifactId>
+            <version>0.1.0-alpha1</version>
+        </dependency>
+       <!-- junit5 idea不支持-->
        <!-- <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
