--- a/src/main/resources/pom.xml
+++ b/src/main/resources/pom.xml
@@ -99,8 +99,7 @@
                         </goals>
                         <configuration>
                             <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vert.core.Launcher</Main-Class>
                                         <Main-Verticle>${main.verticle}</Main-Verticle>
